--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
 .containerb {
   @apply w-full max-w-[1440px] px-5 mx-auto;
 }
-
+*::-webkit-scrollbar {
+  display: none;
+}
 @font-face {
   font-family: giliroy;
   src: url(./fontFamily/Gilroy-Semibold.ttf);
@@ -30,7 +32,7 @@
   background-image: url(./assets/banner.png);
 }
 
-nav[class="containerb"] a::after {
+.salom::before {
   content: "";
   width: 100%;
   position: absolute;
@@ -47,4 +49,94 @@ nav[class="containerb"] a::after {
 }
 .edit2 {
   -webkit-text-fill-color: currentColor;
+  -webkit-text-stroke-width: 0.1px;
+  -webkit-text-stroke-color: white;
+}
+
+.ss {
+  z-index: 10;
+  border: 1px solid white;
+  transform: skew(-25deg) rotate(-8deg);
+}
+.ss::before {
+  content: "Ещё не пробовал?";
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: -15px;
+  left: 10px;
+  position: absolute;
+  height: 48px;
+  background-color: #618967;
+}
+
+.classicSwiper {
+  width: 100%;
+  display: flex;
+  overflow: hidden;
+  position: relative;
+  padding: 0 20px;
+}
+
+.classicSwiper .swiper-wrapper {
+  display: flex;
+}
+
+.classicSwiper .swiper-slide {
+  height: 400px;
+}
+
+.classicSwiper .swiper-pagination {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  column-gap: 60px;
+  justify-content: center;
+  width: 100%;
+  height: 40px;
+  bottom: 0;
+  border-radius: 10px;
+}
+
+.classicSwiper .swiper-pagination-bullet {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: white;
+}
+
+.classicSwiper .swiper-pagination-bullet-active {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #ffffff33;
+}
+
+.classicSwiper .swiper-button-prev {
+  width: 50px;
+  border-radius: 50%;
+  left: 30%;
+  height: 50px;
+  position: absolute;
+  bottom: -5px;
+  filter: brightness(10);
+  background-size: cover;
+  transform: rotate(180deg);
+  cursor: pointer;
+  background-image: url(./assets/arrow.webp);
+  z-index: 30;
+}
+.classicSwiper .swiper-button-next {
+  width: 50px;
+  border-radius: 50%;
+  right: 30%;
+  height: 50px;
+  position: absolute;
+  bottom: -5px;
+  filter: brightness(10);
+  cursor: pointer;
+  background-size: cover;
+  background-image: url(./assets/arrow.webp);
+  z-index: 30;
 }
