--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@
 *::-webkit-scrollbar {
   display: none;
 }
+*{
+  user-select: none;
+}
 @font-face {
   font-family: giliroy;
   src: url(./fontFamily/Gilroy-Semibold.ttf);
